# Examples

CPP/asio/TCPImageTransfer/: CMakeLists.txt  README.md  client.cpp  server.cpp
CPP/ice/: README.md
CPP/ice/FileSender/: Client.cpp  Server.cpp  sender.ice
CPP/move_assignment/: move_assignment.cpp
CPP/multithread/atomic_variables/: sum.cpp  sum_thread.cpp
CPP/node-addons/hello-world/: CMakeLists.txt  README.md  hello.cc  main.js  main2.js  package-lock.json  package.json
CPP/node-addons/hello-world-gyp/: README.md  hello.cc  main.js  package.json
CPP/qt/video_player/: CMakeLists.txt  README.md  main.cpp
